k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: finzla-app
  namespace: finzla
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"   # TLS off for local
    nginx.ingress.kubernetes.io/proxy-body-size: "1m"
spec:
  ingressClassName: nginx
  rules:
    - host: finzla.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: finzla-app
                port:
                  number: 80
